selfhost/test/typechecker/invocation/generics_error_field.1.out
Error at %FILE_NAME%:6:14
Type mismatch for parameter
  |  val _ = f.fn("abc")
                  ^
Expected: Int
but instead found: String
