selfhost/test/typechecker/invocation/generics_error_field.1.abra
type Foo<T> { fn: (T) => T }

func identity(i: Int): Int = i

val f = Foo(fn: identity)
val _ = f.fn("abc")
